# embedclaw

./: .gitignore  CMakeLists.txt  README.md  plan.md  spec.md
.github/workflows/: ci.yml
include/: ec_agent.h  ec_api.h  ec_cacerts.h  ec_config.h  ec_http.h  ec_hw_access.h  ec_hw_datasheet.h  ec_hw_example_asic.h  ec_io.h  ec_json.h  ec_log.h  ec_mbedtls_config.h  ec_mmio.h  ec_model.h  ec_session.h  ec_skill.h  ec_socket.h  ec_tool.h
src/: ec_agent.c  ec_api.c  ec_http.c  ec_hw_access.c  ec_hw_registry.c  ec_io.c  ec_io_telnet.c  ec_io_uart.c  ec_json.c  ec_log.c  ec_mmio.c  ec_model.c  ec_session.c  ec_skill.c  ec_skill_table.c  ec_socket.c  ec_tool.c  main.c
tests/: mock_http.c  mock_http.h  test_e2e.c  test_host_sim.c  test_runner.h  test_telnet_io.c
